--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,5 +1,8 @@
 upstream frontend {
-    server react-app:3000;
+    server react-app-1:3001;
+    server react-app-2:3002;
+    server react-app-3:3003;
+    server react-app-4:3004;
 }
 
 server {
