feat: env 포트 번호 수정

--- a/selq-server/.env
+++ b/selq-server/.env
@@ -1,6 +1,6 @@
 
 SERVER_PORT=8000
-FRONTEND_URL=http://localhost
+FRONTEND_URL=http://13.125.90.77
 
 POSTGRES_HOST=floppy.db.elephantsql.com
 POSTGRES_USER=hrcmgcle
