--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -30,20 +30,20 @@
 
 events {}
 http {
-  upstream frontend {
-    server react-app-1:3000;
-    server react-app-2:3001;
-    server react-app-3:3002;
-    server react-app-4:3003;
-  }
+  # upstream frontend {
+  #   server react-app-1:3000;
+  #   server react-app-2:3001;
+  #   server react-app-3:3002;
+  #   server react-app-4:3003;
+  # }
   server {
     listen 80;
 
-    # listen 443 ssl;
-    # listen [::]:443 ssl;
+    listen 443 ssl;
+    listen [::]:443 ssl;
 
-    # ssl_certificate cert/cert.pem;
-    # ssl_certificate_key cert/key.pem;
+    ssl_certificate cert/cert.pem;
+    ssl_certificate_key cert/key.pem;
 
     location / {
         proxy_http_version 1.1;
@@ -56,7 +56,7 @@ http {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
 
-        proxy_pass http://frontend;
+        proxy_pass http://react-app-backend:8000;
     }
   }
 }
