--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -42,69 +42,69 @@
 version: '3'
 
 services:
-  react-app-1:
-    build:
-      context: selq-client
-      # context: .
-      dockerfile: Dockerfile
-    container_name: react-app-1
-    networks:
-      - selq-network
-    # volumes:
-    #   - ./react:/usr/src/app
-    #   - /usr/src/app/node_modules
-    ports:
-      - '3000:3000'
-    # depends_on:
-    #   - react-app-backend
+  # react-app-1:
+  #   build:
+  #     context: selq-client
+  #     # context: .
+  #     dockerfile: Dockerfile
+  #   container_name: react-app-1
+  #   networks:
+  #     - selq-network
+  #   # volumes:
+  #   #   - ./react:/usr/src/app
+  #   #   - /usr/src/app/node_modules
+  #   ports:
+  #     - '3000:3000'
+  #   # depends_on:
+  #   #   - react-app-backend
 
-  react-app-2:
-    build:
-      context: selq-client
-      # context: .
-      dockerfile: Dockerfile
-    container_name: react-app-2
-    networks:
-      - selq-network
-    # volumes:
-    #   - ./react:/usr/src/app
-    #   - /usr/src/app/node_modules
-    ports:
-      - '3001:3000'
-    # depends_on:
-    #   - react-app-backend
+  # react-app-2:
+  #   build:
+  #     context: selq-client
+  #     # context: .
+  #     dockerfile: Dockerfile
+  #   container_name: react-app-2
+  #   networks:
+  #     - selq-network
+  #   # volumes:
+  #   #   - ./react:/usr/src/app
+  #   #   - /usr/src/app/node_modules
+  #   ports:
+  #     - '3001:3000'
+  #   # depends_on:
+  #   #   - react-app-backend
 
-  react-app-3:
-    build:
-      context: selq-client
-      # context: .
-      dockerfile: Dockerfile
-    container_name: react-app-3
-    networks:
-      - selq-network
-    # volumes:
-    #   - ./react:/usr/src/app
-    #   - /usr/src/app/node_modules
-    ports:
-      - '3002:3000'
-    # depends_on:
-    #   - react-app-backend
+  # react-app-3:
+  #   build:
+  #     context: selq-client
+  #     # context: .
+  #     dockerfile: Dockerfile
+  #   container_name: react-app-3
+  #   networks:
+  #     - selq-network
+  #   # volumes:
+  #   #   - ./react:/usr/src/app
+  #   #   - /usr/src/app/node_modules
+  #   ports:
+  #     - '3002:3000'
+  #   # depends_on:
+  #   #   - react-app-backend
 
-  react-app-4:
-    build:
-      context: selq-client
-      # context: .
-      dockerfile: Dockerfile
-    container_name: react-app-4
-    networks:
-      - selq-network
-    # volumes:
-    #   - ./react:/usr/src/app
-    #   - /usr/src/app/node_modules
-    ports:
-      - '3003:3000'
-    # depends_on:
-    #   - react-app-backend
+  # react-app-4:
+  #   build:
+  #     context: selq-client
+  #     # context: .
+  #     dockerfile: Dockerfile
+  #   container_name: react-app-4
+  #   networks:
+  #     - selq-network
+  #   # volumes:
+  #   #   - ./react:/usr/src/app
+  #   #   - /usr/src/app/node_modules
+  #   ports:
+  #     - '3003:3000'
+  #   # depends_on:
+  #   #   - react-app-backend
 
   react-app-backend:
     build:
@@ -161,14 +161,18 @@ services:
     container_name: nginx
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
+      - ./cert/cert.pem:/etc/nginx/cert/cert.pem
+      - ./cert/key.pem:/etc/nginx/cert/key.pem
     ports:
       - 80:80
+      - 443:443
     command: /bin/sh -c "nginx -g 'daemon off;'"
     depends_on:
-      - react-app-1
-      - react-app-2
-      - react-app-3
-      - react-app-4
+      - react-app-backend:
+      # - react-app-1
+      # - react-app-2
+      # - react-app-3
+      # - react-app-4
       # - react-app-backend
       # api-prod:
       #   condition: service_healthy
