--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -168,7 +168,7 @@ services:
       - 443:443
     command: /bin/sh -c "nginx -g 'daemon off;'"
     depends_on:
-      - react-app-backend:
+      - react-app-backend
       # - react-app-1
       # - react-app-2
       # - react-app-3
