--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -42,21 +42,33 @@
 version: '3'
 
 services:
-  # react-app-1:
-  #   build:
-  #     context: selq-client
-  #     # context: .
-  #     dockerfile: Dockerfile
-  #   container_name: react-app-1
-  #   networks:
-  #     - selq-network
-  #   # volumes:
-  #   #   - ./react:/usr/src/app
-  #   #   - /usr/src/app/node_modules
-  #   ports:
-  #     - '3000:3000'
-  #   # depends_on:
-  #   #   - react-app-backend
+  nginx:
+    image: nginx:latest
+    container_name: nginx
+    volumes:
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
+      - ./cert/cert.pem:/etc/nginx/cert/cert.pem
+      - ./cert/key.pem:/etc/nginx/cert/key.pem
+    ports:
+      - 80:80
+      - 443:443
+    command: /bin/sh -c "nginx -g 'daemon off;'"
+    depends_on:
+      - react-app-1
+    networks:
+      - selq-network
+
+  react-app-1:
+    build:
+      context: selq-client
+      dockerfile: Dockerfile
+    container_name: react-app-1
+    networks:
+      - selq-network
+    ports:
+      - 3000:3000
+    # depends_on:
+    #   - react-app-backend
 
   # react-app-2:
   #   build:
@@ -120,7 +132,7 @@ services:
     ports:
       #      - ${BACKEND_PORT}:${BACKEND_PORT}
       # - 443:443
-      - '8000:8000'
+      - 8000:8000
     networks:
       - selq-network
 
@@ -156,30 +168,6 @@ services:
   # volumes:
   #   - ./cert/cert.pem:/etc/nginx/cert/cert.pem
   #   - ./cert/key.pem:/etc/nginx/cert/key.pem
-  nginx:
-    image: nginx:latest
-    container_name: nginx
-    volumes:
-      - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
-      - ./cert/cert.pem:/etc/nginx/cert/cert.pem
-      - ./cert/key.pem:/etc/nginx/cert/key.pem
-    ports:
-      - 80:80
-      - 443:443
-    command: /bin/sh -c "nginx -g 'daemon off;'"
-    depends_on:
-      - react-app-backend
-      # - react-app-1
-      # - react-app-2
-      # - react-app-3
-      # - react-app-4
-      # - react-app-backend
-      # api-prod:
-      #   condition: service_healthy
-      # app-prod:
-      #   condition: service_started
-    networks:
-      - selq-network
 
 networks:
   selq-network:
