--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -30,9 +30,10 @@
 
 events {}
 http {
-  upstream backend {
-    server react-app-backend:8000;
-  #   server react-app-1:3000;
+  upstream frontend {
+  # upstream backend {
+    # server react-app-backend:8000;
+    server react-app-1:3000;
   #   server react-app-2:3001;
   #   server react-app-3:3002;
   #   server react-app-4:3003;
@@ -57,7 +58,8 @@ http {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
 
-        proxy_pass http://backend;
+        proxy_pass http://frontend;
+        # proxy_pass http://backend;
         # proxy_pass http://react-app-backend:8000;
     }
   }
