--- a/selq-server/.env
+++ b/selq-server/.env
@@ -1,6 +1,9 @@
 
 SERVER_PORT=8000
-FRONTEND_URL=http://43.202.208.59
+# FRONTEND_URL=http://localhost:3000
+# FRONTEND_URL=http://react-app-1:3000
+# FRONTEND_URL=http://43.202.208.59:3000
+FRONTEND_URL=http://selq.store:3000
 
 POSTGRES_HOST=floppy.db.elephantsql.com
 POSTGRES_USER=hrcmgcle
