--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -55,6 +55,7 @@ services:
     command: /bin/sh -c "nginx -g 'daemon off;'"
     depends_on:
       - react-app-1
+      - react-app-backend
     networks:
       - selq-network
 
@@ -67,8 +68,8 @@ services:
       - selq-network
     ports:
       - 3000:3000
-    # depends_on:
-    #   - react-app-backend
+    depends_on:
+      - react-app-backend
 
   # react-app-2:
   #   build:
