--- a/selq-server/.env
+++ b/selq-server/.env
@@ -3,7 +3,7 @@ SERVER_PORT=8000
 # FRONTEND_URL=http://localhost:3000
 # FRONTEND_URL=http://react-app-1:3000
 # FRONTEND_URL=http://43.202.208.59:3000
-FRONTEND_URL=http://selq.store:3000
+FRONTEND_URL=http://selq.store
 
 POSTGRES_HOST=floppy.db.elephantsql.com
 POSTGRES_USER=hrcmgcle
