--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -38,6 +38,15 @@ http {
   #   server react-app-3:3002;
   #   server react-app-4:3003;
   }
+
+  upstream backend {
+  # upstream backend {
+    # server react-app-backend:8000;
+    server react-app-backend:8000;
+  #   server react-app-2:3001;
+  #   server react-app-3:3002;
+  #   server react-app-4:3003;
+  }
   server {
     listen 80;
 
@@ -62,5 +71,23 @@ http {
         # proxy_pass http://backend;
         # proxy_pass http://react-app-backend:8000;
     }
+
+    location /api {
+        proxy_http_version 1.1;
+        proxy_cache_bypass $http_upgrade;
+
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+
+        proxy_pass http://backend;
+        # proxy_pass http://backend;
+        # proxy_pass http://react-app-backend:8000;
+    }
+
+
   }
 }
