update nginx conf

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,19 +1,19 @@
 upstream frontend {
-    server react-app-1:3001;
-    server react-app-2:3002;
-    server react-app-3:3003;
-    server react-app-4:3004;
+    server react-app-1:3000;
+    # server react-app-2:3002;
+    # server react-app-3:3003;
+    # server react-app-4:3004;
 }
 
 server {
     listen 80;
     
-    # listen 443 ssl;
-    # listen [::]:443 ssl;
-    # ssl_certificate     cert/cert.pem;
-    # ssl_certificate_key cert/key.pem;
+    listen 443 ssl;
+    listen [::]:443 ssl;
+    ssl_certificate     cert/cert.pem;
+    ssl_certificate_key cert/key.pem;
 
-    server_name localhost;
+    # server_name localhost;
 
 
     location / {
